Moved django.ini

--- a/conf/adopt.conf
+++ b/conf/adopt.conf
@@ -6,4 +6,4 @@ description "uwsgi adopt"
 start on runlevel [2345]
 stop on runlevel [06]
 
-exec sudo /srv/adopt/env/bin/uwsgi --master --die-on-term --ini /srv/adopt/django.ini
+exec sudo /srv/adopt/env/bin/uwsgi --master --die-on-term --ini /srv/adopt/pets/django.ini
