Moved uwsgi from socket to http and added allowed hosts

--- a/pets/django.ini
+++ b/pets/django.ini
@@ -1,7 +1,6 @@
 [uwsgi]
 # Configuration ini for uWSGI
-# Set the http port (as a socket)
-socket = 127.0.0.1:9001
+http = 127.0.0.1:9001
 
 # Change to the django project directory
 chdir = /srv/adopt/pets
