--- a/cmd/robot_pet.conf
+++ b/cmd/robot_pet.conf
@@ -5,5 +5,5 @@ description "auto pets init"
 start on runlevel [2345]
 stop on runlevel [!2345]
 
-chdir /srv/castle/newcastle
+chdir /srv/adopt/cmd
 exec ./auto_pets -log=./adopt.log
